[tool.poetry]
name = "comment crawler"
version = "0.1.0"
description = ""
authors = ["David Chiu <david20571015@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^4.3.0"
webdriver-manager = "^3.8.0"

[tool.poetry.dev-dependencies]
yapf = "^0.32.0"
pylint = "^2.14.4"
toml = "^0.10.2"

[tool.yapf]
based_on_style = "google"

[tool.isort]
profile = "google"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
